# gst-project-template

./: CMakeLists.txt  README  meson.build
app/: CMakeLists.txt  gstMyProject.c  meson.build
plugin/: CMakeLists.txt  gstMyProjectplugin.c
plugins/: gstMyProjct.c  gstMyProjct.h  gstMyProjctplugin.c  gstMyProject.c  gstMyProject.h  meson.build
tools/: gstMyProjct.c  gstMyProject.c  meson.build
